# clinic-system

./: .gitignore  AUDITORIA_COMPLETA.md  COMIENZA_AQUI.md  DASHBOARD_AUDITORIA.txt  FIXES_PRIORITARIOS.md  INDICE_AUDITORIA.md  OPCIONES_TEMA_DETALLADAS.md  RESUMEN_AUDITORIA.md  index.html  package-lock.json  package.json  test-inventory.js  tsconfig.app.json  vite.config.ts
database/: schema.sql
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/common/: NotificationHelper.ts
src/components/invoices/: InvoicePreview.css  InvoicePreview.tsx
src/components/layout/: MainLayout.css  MainLayout.tsx  ModuleHeader.css  ModuleHeader.tsx  UserProfile.css  UserProfile.tsx
src/components/odontogram/: Odontogram.css  Odontogram.tsx  ToothSVG.tsx
src/config/: themeConfig.ts
src/hooks/: useThemeColors.ts
src/pages/admin/: Admin.css  Admin.tsx  ColorPicker.tsx  Settings.css  Settings.tsx  ThemeSettings.css  ThemeSettings.tsx  Users.css  Users.tsx
src/pages/appointments/: Appointments.css  Appointments.tsx  ClinicalRecords.css  ClinicalRecords.tsx
src/pages/dashboard/: Dashboard.css  Dashboard.tsx
src/pages/doctors/: Doctors.css  Doctors.tsx
src/pages/earnings/: Earnings.css  Earnings.tsx
src/pages/evaluation/: DentalEvaluation.css  DentalEvaluation.tsx
src/pages/inventory/: Inventory.css  Inventory.tsx
src/pages/invoices/: Invoices.css  (+1 more)
src/services/: auth.ts  database.ts  pdfExport.ts  validation.ts
src/stores/: authStore.ts  settingsStore.ts  translationsStore.ts
src/styles/: globals.css  inputs.css
src/types/: index.ts
(+6 files in other folders)
